[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cutqc2"
version = "0.0.5"
description = "Quantum Circuit Cutting and Reconstruction"
license = "MIT"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "numpy",
    "qiskit",
    "matplotlib<3.10",  # https://stackoverflow.com/questions/79366678/
    "pydot",
    "scipy",
    "tqdm",
    "pylatexenc",
    "scikit-learn",
    "tensorflow",
    "networkx",
    "gurobipy<12",
    "psutil",
    "qiskit-aer",
    "h5py",
    "qiskit-qasm3-import",
    "zarr",
    "click",
    "mpi4py",
    "cupy-cuda12x",
    "cudaq"
]

[project.scripts]
cutqc2 = "cutqc2.__main__:cli"

[project.optional-dependencies]
dev = [
    "pytest>6"
]
docs = [
    "sphinx",
    "myst-parser",
    "sphinx-autodoc-typehints",
    "nbsphinx",
    "sphinx-gallery",
    "sphinx-material",
    "sphinx-autodoc-annotation",
    "jupyterlab",
    "plotly",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.cu"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-sv"

[tool.ruff]
exclude = ["src/cutqc2/cutqc/**"]