[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cutqc2"
version = "0.0.6"
description = "Quantum Circuit Cutting and Reconstruction"
license = "MIT"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "numpy",
    "qiskit",
    "matplotlib<3.10",  # https://stackoverflow.com/questions/79366678/
    "pydot",
    "scipy",
    "tqdm",
    "pylatexenc",
    "scikit-learn",
    "tensorflow",
    "networkx",
    "gurobipy<12",
    "psutil",
    "qiskit-aer",
    "h5py",
    "qiskit-qasm3-import",
    "zarr",
    "click",
    "mpi4py",
    "cudaq",
    "python-dotenv"
]

[project.scripts]
cutqc2 = "cutqc2.__main__:cli"

[project.optional-dependencies]
gpu = [
    "cupy-cuda12x"
]
dev = [
    "pytest>6",
    "coverage",
    "coveralls"
]
docs = [
    "sphinx",
    "myst-parser",
    "sphinx-autodoc-typehints",
    "nbsphinx",
    "sphinx-gallery",
    "sphinx-material",
    "sphinx-autodoc-annotation",
    "jupyterlab",
    "plotly",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.cu"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-sv"

[tool.ruff]
exclude = ["src/cutqc2/cutqc/**"]

[tool.ruff.lint]
extend-select = [
  "B",           # flake8-bugbear
  "I",           # isort
  "ARG",         # flake8-unused-arguments
  "C4",          # flake8-comprehensions
  "ICN",         # flake8-import-conventions
  "PGH",         # pygrep-hooks
  "PIE",         # flake8-pie
  "PL",          # pylint
  "PT",          # flake8-pytest-style
  "PTH",         # flake8-use-pathlib
  "RET",         # flake8-return
  "RUF",         # Ruff-specific
  "SIM",         # flake8-simplify
  "TID251",      # flake8-tidy-imports.banned-api
  "T20",         # flake8-print
  "UP",          # pyupgrade
  "YTT",         # flake8-2020
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004"]  # Magic values used in pytests
"examples/*" = ["T201"]  # print statements